--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cosmic-detector-unit-hat.pretty"]
-	path = cosmic-detector-unit-hat.pretty
+	path = muonpi-kicad-library.pretty
 	url = git@github.com:MuonPi/kicad-library.git
